implement swagger annotations for all methods
